route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: starbust-web
  namespace: redhat-starburst-operator
spec:
  subdomain: sep
  path: "/"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: coordinator
